# cheats

./: README.md  pyproject.toml
app/: server.py
app/router/: nyi.py
snippets/: OpenAI_like_API.py  deepseek_langchain.py  file_list.py  list_tools.py  tomllib_test.py  tqdm.py
snippets/watchdog/: Readme.md  Schedule_Watchdog_management.xml  Schedule_Watchdog_organisation.xml  Schedule_Watchdog_support.xml  WatchFolder.py  start_watchdog.bat  test.txt  watch.py
utils/: WatchFolder.py
